--- a/auth/login.html
+++ b/auth/login.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('../assets/images/9701606.jpg');
+      background-image: url('../assets/images/texture-background-with-shawls.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -18,10 +18,10 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      position: relative;
+      /* position: relative; */
     }
 
-    body::before {
+    /* body::before {
       content: '';
       position: absolute;
       top: 0;
@@ -30,7 +30,7 @@
       bottom: 0;
       background: rgba(0, 0, 0, 0.4);
       z-index: 1;
-    }
+    } */
 
     .login-container {
       background-color: rgba(255, 255, 255, 0.95);
@@ -67,7 +67,7 @@
     .login-container button {
       width: 100%;
       padding: 0.6rem;
-      background-color: #4e54c8;
+      background-color: #C5172E;
       color: white;
       border: none;
       border-radius: 4px;
@@ -77,7 +77,7 @@
     }
 
     .login-container button:hover {
-      background-color: #3b3fc1;
+      background-color: #600620;
     }
 
     .login-container .register-link {
@@ -104,13 +104,27 @@
     .notification.show {
       display: block;
     }
+    .back-button {
+      /* position: relative; */
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin: 10px;
+      background-color: #C5172E;
+      color: white;
+      border-radius: 5px;
+      padding: 5px 10px;
+      text-decoration: none;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
+  <button class="back-button" onclick="window.location.href='../index.php'">Back</button>
   <div class="login-container">
     <h2>Login</h2>
     <form method="POST" action="login.php">
-      <label for="username">Username</label>
+      <label for="username">Email</label>
       <input type="text" id="username" name="username" required />
 
       <label for="password">Password</label>
