--- a/index.html
+++ b/index.html
@@ -1,34 +1,120 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Chatbox</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VPF Fashion - Thời trang Việt Nam</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
 </head>
 <body>
+    <!-- Header -->
+    
+    <?php if (empty($_GET['search']) && empty($_GET['category'] )): ?>
+    <!-- Hero Banner - Only show when not searching or filtering by category -->
+    <section class="hero-banner">
+        <div class="banner-content">
+            <h2>Năm mới<br>Khoác<br>niềm vui mới</h2>
+            <button class="cta-button">MUA NGAY</button>
+        </div>
+    </section>
+    <?php endif; ?>
 
-<!-- Nút mở chat -->
-<div id="chat-toggle" class="chat-icon">
-  <img src="Chatbox-PR.png" alt="chat icon" width="50">
-</div>
+    <!-- Product Categories -->
+    <section class="product-section <?php echo !empty($searchQuery) ? 'search-mode' : ''; ?>">
+        <?php if (!empty($searchQuery) || !empty($selectedCategory)): ?>
+            <div class="search-results-header">
+                <?php if (!empty($searchQuery)): ?>
+                    <h2>Kết quả tìm kiếm cho: "<?php echo htmlspecialchars($searchQuery); ?>" (<?php echo $resultCount; ?> sản phẩm)</h2>
+                <?php elseif (!empty($selectedCategory)): ?>
+                    <h2><?php echo htmlspecialchars($selectedCategory); ?> (<?php echo $resultCount; ?> sản phẩm)</h2>
+                <?php endif; ?>
+            </div>
+        <?php else: ?>
+            <div class="section-header">
+                <h2>Danh Mục Sản Phẩm</h2>
+            </div>
+        <?php endif; ?>
 
-<!-- Khung chat -->
-<div id="chatbox" class="chatbox hidden">
-  <div class="chat-header">
-    <span>● Chúng tôi sẽ trả lời sớm nhất có thể</span>
-    <button id="chat-close">✕</button>
-  </div>
-  <div id="chat-messages" class="chat-messages"></div>
-  <div class="chat-input">
-    <input type="text" id="messageInput" placeholder="Gõ tin nhắn của bạn...">
-    <button onclick="sendMessage()">▲</button>
-    <button id="emoji-btn">😊</button>
-    <label for="fileInput" class="file-label">📎</label>
-    <input type="file" id="fileInput" hidden>
-  </div>
-  <div id="emoji-box" class="emoji-box hidden"></div>
-</div>
+        <?php if (!empty($_GET['category'])): ?>
+        <!-- Category Filtered View -->
+        <div class="product-grid">
+            <?php foreach ($products as $product): ?>
+                <?php include 'includes/product_card.php'; ?>
+            <?php endforeach; ?>
+        </div>
+        <?php elseif (!empty($_GET['search'])): ?>
+        <!-- Search Results -->
+        <div class="product-grid">
+            <?php foreach ($products as $product): ?>
+                <?php include 'includes/product_card.php'; ?>
+            <?php endforeach; ?>
+        </div>
+        <?php else: ?>
+        <!-- Regular Category Display -->
+        <?php foreach ($categories as $category => $categoryProducts): ?>
+        <div class="category-section">
+            <div class="category-header">
+                <h3><?= htmlspecialchars($category) ?></h3>
+                <div class="chat-button">
+                    <i class="fas fa-comments"></i>
+                    <a href="chat/index.html">Hỏi đáp</a>
+                </div>
+            </div>
+            <div class="product-grid">
+                <?php foreach ($categoryProducts as $product): ?>
+                <a href="product.php?id=<?= $product['id'] ?>" class="product-link">
+                    <div class="product-card">
+                        <?php if ($product['stock'] < 5): ?>
+                        <div class="product-badge">Sale</div>
+                        <?php endif; ?>
+                        <div class="product-image">
+                            <?php if (!empty($product['image']) && file_exists('assets/images/' . $product['image'])): ?>
+                                <img src="assets/images/<?= htmlspecialchars($product['image']) ?>" alt="<?= htmlspecialchars($product['name']) ?>">
+                            <?php else: ?>
+                                <?php 
+                                    $placeholderText = urlencode($product['name']);
+                                    $bgColor = '';
+                                    $textColor = '555555';
+                                    switch($product['category']) {
+                                        case 'Đồ Nam': $bgColor = '87CEEB'; break;
+                                        case 'Đồ Nữ': $bgColor = 'FFB6C1'; break;
+                                        case 'Đồ Bé Trai': $bgColor = '90EE90'; break;
+                                        case 'Đồ Bé Gái': $bgColor = 'FFFFE0'; break;
+                                        default: $bgColor = 'DEDEDE';
+                                    }
+                                ?>
+                                <img src="https://placeholder.pics/svg/300x400/<?= $bgColor ?>/<?= $textColor ?>/<?= $placeholderText ?>" alt="<?= htmlspecialchars($product['name']) ?>">
+                            <?php endif; ?>
+                            <button class="wishlist-button"><i class="far fa-heart"></i></button>
+                        </div>
+                        <div class="product-info">
+                            <h4><?= htmlspecialchars($product['name']) ?></h4>
+                            <p class="price">Giá: <?= number_format($product['price'], 0, ',', '.') ?>đ</p>
+                            <?php if (!empty($product['size'])): ?>
+                            <p class="size">Size: <?= htmlspecialchars($product['size']) ?></p>
+                            <?php endif; ?>
+                            <?php if (!empty($product['color'])): ?>
+                            <p class="colors">Màu: <?= htmlspecialchars($product['color']) ?></p>
+                            <?php endif; ?>
+                        </div>
+                    </div>
+                </a>
+                <?php endforeach; ?>
+            </div>
+        </div>
+        <?php endforeach; ?>
+        <?php endif; ?>
 
-<script src="script.js"></script>
+        <?php if (empty($_GET['search'])): ?>
+        <!-- View More Button - Only show when not searching -->
+        <div class="view-more">
+            <button>Xem Thêm</button>
+        </div>
+        <?php endif; ?>
+    </section>
+
+    <!-- Footer -->
+    
 </body>
 </html>
