--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <!-- Header -->
-    
-    <?php if (empty($_GET['search']) && empty($_GET['category'] )): ?>
+      <?php if (empty($_GET['search']) && empty($_GET['category'])): ?>
     <!-- Hero Banner - Only show when not searching or filtering by category -->
     <section class="hero-banner">
         <div class="banner-content">
@@ -34,26 +33,59 @@
             <div class="section-header">
                 <h2>Danh Mục Sản Phẩm</h2>
             </div>
-        <?php endif; ?>
-
-        <?php if (!empty($_GET['category'])): ?>
-        <!-- Category Filtered View -->
+        <?php endif; ?>        <?php if (!empty($_GET['category']) || !empty($_GET['search'])): ?>
+        <!-- Category Filtered View or Search Results -->
         <div class="product-grid">
-            <?php foreach ($products as $product): ?>
-                <?php include 'includes/product_card.php'; ?>
-            <?php endforeach; ?>
+            <?php if (!empty($products)): ?>
+                <?php foreach ($products as $product): ?>
+                    <a href="product.php?id=<?= $product['id'] ?>" class="product-link">
+                        <div class="product-card">
+                            <?php if ($product['stock'] < 5): ?>
+                            <div class="product-badge">Sale</div>
+                            <?php endif; ?>
+                            <div class="product-image">
+                                <?php if (!empty($product['image']) && file_exists('assets/images/' . $product['image'])): ?>
+                                    <img src="assets/images/<?= htmlspecialchars($product['image']) ?>" alt="<?= htmlspecialchars($product['name']) ?>">
+                                <?php else: ?>
+                                    <?php 
+                                        $placeholderText = urlencode($product['name']);
+                                        $bgColor = '';
+                                        $textColor = '555555';
+                                        switch($product['category']) {
+                                            case 'Đồ Nam': $bgColor = '87CEEB'; break;
+                                            case 'Đồ Nữ': $bgColor = 'FFB6C1'; break;
+                                            case 'Đồ Bé Trai': $bgColor = '90EE90'; break;
+                                            case 'Đồ Bé Gái': $bgColor = 'FFFFE0'; break;
+                                            default: $bgColor = 'DEDEDE';
+                                        }
+                                    ?>
+                                    <img src="https://placeholder.pics/svg/300x400/<?= $bgColor ?>/<?= $textColor ?>/<?= $placeholderText ?>" alt="<?= htmlspecialchars($product['name']) ?>">
+                                <?php endif; ?>
+                                <button class="wishlist-button"><i class="far fa-heart"></i></button>
+                            </div>
+                            <div class="product-info">
+                                <h4><?= htmlspecialchars($product['name']) ?></h4>
+                                <p class="price">Giá: <?= number_format($product['price'], 0, ',', '.') ?>đ</p>
+                                <?php if (!empty($product['size'])): ?>
+                                <p class="size">Size: <?= htmlspecialchars($product['size']) ?></p>
+                                <?php endif; ?>
+                                <?php if (!empty($product['color'])): ?>
+                                <p class="colors">Màu: <?= htmlspecialchars($product['color']) ?></p>
+                                <?php endif; ?>
+                            </div>
+                        </div>
+                    </a>
+                <?php endforeach; ?>
+            <?php else: ?>
+                <div class="no-results">
+                    <p>Không tìm thấy sản phẩm nào.</p>
+                </div>
+            <?php endif; ?>
         </div>
-        <?php elseif (!empty($_GET['search'])): ?>
-        <!-- Search Results -->
-        <div class="product-grid">
-            <?php foreach ($products as $product): ?>
-                <?php include 'includes/product_card.php'; ?>
-            <?php endforeach; ?>
-        </div>
-        <?php else: ?>
-        <!-- Regular Category Display -->
+        <?php else: ?>        <!-- Regular Category Display -->
         <?php foreach ($categories as $category => $categoryProducts): ?>
-        <div class="category-section">            <div class="category-header">
+        <div class="category-section">
+            <div class="category-header">
                 <h3><?= htmlspecialchars($category) ?></h3>
                 <div class="chat-button" onclick="document.querySelector('.chat-trigger').click()">
                     <i class="fas fa-comments"></i>
@@ -62,43 +94,7 @@
             </div>
             <div class="product-grid">
                 <?php foreach ($categoryProducts as $product): ?>
-                <a href="product.php?id=<?= $product['id'] ?>" class="product-link">
-                    <div class="product-card">
-                        <?php if ($product['stock'] < 5): ?>
-                        <div class="product-badge">Sale</div>
-                        <?php endif; ?>
-                        <div class="product-image">
-                            <?php if (!empty($product['image']) && file_exists('assets/images/' . $product['image'])): ?>
-                                <img src="assets/images/<?= htmlspecialchars($product['image']) ?>" alt="<?= htmlspecialchars($product['name']) ?>">
-                            <?php else: ?>
-                                <?php 
-                                    $placeholderText = urlencode($product['name']);
-                                    $bgColor = '';
-                                    $textColor = '555555';
-                                    switch($product['category']) {
-                                        case 'Đồ Nam': $bgColor = '87CEEB'; break;
-                                        case 'Đồ Nữ': $bgColor = 'FFB6C1'; break;
-                                        case 'Đồ Bé Trai': $bgColor = '90EE90'; break;
-                                        case 'Đồ Bé Gái': $bgColor = 'FFFFE0'; break;
-                                        default: $bgColor = 'DEDEDE';
-                                    }
-                                ?>
-                                <img src="https://placeholder.pics/svg/300x400/<?= $bgColor ?>/<?= $textColor ?>/<?= $placeholderText ?>" alt="<?= htmlspecialchars($product['name']) ?>">
-                            <?php endif; ?>
-                            <button class="wishlist-button"><i class="far fa-heart"></i></button>
-                        </div>
-                        <div class="product-info">
-                            <h4><?= htmlspecialchars($product['name']) ?></h4>
-                            <p class="price">Giá: <?= number_format($product['price'], 0, ',', '.') ?>đ</p>
-                            <?php if (!empty($product['size'])): ?>
-                            <p class="size">Size: <?= htmlspecialchars($product['size']) ?></p>
-                            <?php endif; ?>
-                            <?php if (!empty($product['color'])): ?>
-                            <p class="colors">Màu: <?= htmlspecialchars($product['color']) ?></p>
-                            <?php endif; ?>
-                        </div>
-                    </div>
-                </a>
+                    <?php include 'includes/product_card.php'; ?>
                 <?php endforeach; ?>
             </div>
         </div>
