add forget password feature, remove favourite and add roles

--- a/auth/login.html
+++ b/auth/login.html
@@ -130,11 +130,10 @@
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required />
 
-      <button type="submit">Login</button>
-
-      <div id="notification" class="notification"></div>
+      <button type="submit">Login</button>      <div id="notification" class="notification"></div>
 
       <a class="register-link" href="register.html">Don't have an account?</a>
+      <a class="register-link" href="forgot_password.php" style="margin-top: 0.5rem; display: block; color: #666;">Forgot your password?</a>
     </form>
   </div>
 </body>
