--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                                             default: $bgColor = 'DEDEDE';
                                         }
                                     ?>
-                                    <img src="https://placeholder.pics/svg/300x400/<?= $bgColor ?>/<?= $textColor ?>/<?= $placeholderText ?>" alt="<?= htmlspecialchars($product['name']) ?>">
-                                <?php endif; ?>
-                                <button class="wishlist-button"><i class="far fa-heart"></i></button>
+                                    <img src="https://placeholder.pics/svg/300x400/<?= $bgColor ?>/<?= $textColor ?>/<?= $placeholderText ?>" alt="<?= htmlspecialchars($product['name']) ?>">                                <?php endif; ?>
                             </div>
                             <div class="product-info">
                                 <h4><?= htmlspecialchars($product['name']) ?></h4>
