--- a/index.html
+++ b/index.html
@@ -1,114 +1,69 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VPF Fashion - Thời trang Việt Nam</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
-</head>
-<body>
-    <!-- Header -->
-      <?php if (empty($_GET['search']) && empty($_GET['category'])): ?>
-    <!-- Hero Banner - Only show when not searching or filtering by category -->
+<?php
+// Hero Banner: Display only when no search or category filter is applied
+if (empty($_GET['search']) && empty($_GET['category'])): ?>
     <section class="hero-banner">
         <div class="banner-content">
             <h2>Năm mới<br>Khoác<br>niềm vui mới</h2>
             <button class="cta-button">MUA NGAY</button>
         </div>
     </section>
+<?php endif; ?>
+
+<!-- Product Section: Handles category display, search results, or filtered view -->
+<section class="product-section <?php echo !empty($searchQuery) ? 'search-mode' : ''; ?>">
+    
+    <!-- Header: Display search results or category title if applicable -->
+    <?php if (!empty($searchQuery) || !empty($selectedCategory)): ?>
+        <div class="search-results-header">
+            <?php if (!empty($searchQuery)): ?>
+                <h2>Kết quả tìm kiếm cho: "<?php echo htmlspecialchars($searchQuery); ?>" (<?php echo $resultCount; ?> sản phẩm)</h2>
+            <?php elseif (!empty($selectedCategory)): ?>
+                <h2><?php echo htmlspecialchars($selectedCategory); ?> (<?php echo $resultCount; ?> sản phẩm)</h2>
+            <?php endif; ?>
+        </div>
+    <?php else: ?>
+        <div class="section-header">
+            <h2>Danh Mục Sản Phẩm</h2>
+        </div>
     <?php endif; ?>
 
-    <!-- Product Categories -->
-    <section class="product-section <?php echo !empty($searchQuery) ? 'search-mode' : ''; ?>">
-        <?php if (!empty($searchQuery) || !empty($selectedCategory)): ?>
-            <div class="search-results-header">
-                <?php if (!empty($searchQuery)): ?>
-                    <h2>Kết quả tìm kiếm cho: "<?php echo htmlspecialchars($searchQuery); ?>" (<?php echo $resultCount; ?> sản phẩm)</h2>
-                <?php elseif (!empty($selectedCategory)): ?>
-                    <h2><?php echo htmlspecialchars($selectedCategory); ?> (<?php echo $resultCount; ?> sản phẩm)</h2>
-                <?php endif; ?>
-            </div>
-        <?php else: ?>
-            <div class="section-header">
-                <h2>Danh Mục Sản Phẩm</h2>
-            </div>
-
-        <?php endif; ?>        <?php if (!empty($_GET['category']) || !empty($_GET['search'])): ?>
-        <!-- Category Filtered View or Search Results -->
+    <!-- Product Display: Search results, filtered category, or all categories -->
+    <?php if (!empty($_GET['category']) || !empty($_GET['search'])): ?>
+        <!-- Search Results or Category Filtered View -->
         <div class="product-grid">
             <?php if (!empty($products)): ?>
                 <?php foreach ($products as $product): ?>
-                    <a href="product.php?id=<?= $product['id'] ?>" class="product-link">
-                        <div class="product-card">
-                            <?php if ($product['stock'] < 5): ?>
-                            <div class="product-badge">Sale</div>
-                            <?php endif; ?>
-                            <div class="product-image">
-                                <?php if (!empty($product['image']) && file_exists('assets/images/' . $product['image'])): ?>
-                                    <img src="assets/images/<?= htmlspecialchars($product['image']) ?>" alt="<?= htmlspecialchars($product['name']) ?>">
-                                <?php else: ?>
-                                    <?php 
-                                        $placeholderText = urlencode($product['name']);
-                                        $bgColor = '';
-                                        $textColor = '555555';
-                                        switch($product['category']) {
-                                            case 'Đồ Nam': $bgColor = '87CEEB'; break;
-                                            case 'Đồ Nữ': $bgColor = 'FFB6C1'; break;
-                                            case 'Đồ Bé Trai': $bgColor = '90EE90'; break;
-                                            case 'Đồ Bé Gái': $bgColor = 'FFFFE0'; break;
-                                            default: $bgColor = 'DEDEDE';
-                                        }
-                                    ?>
-                                    <img src="https://placeholder.pics/svg/300x400/<?= $bgColor ?>/<?= $textColor ?>/<?= $placeholderText ?>" alt="<?= htmlspecialchars($product['name']) ?>">                                <?php endif; ?>
-                            </div>
-                            <div class="product-info">
-                                <h4><?= htmlspecialchars($product['name']) ?></h4>
-                                <p class="price">Giá: <?= number_format($product['price'], 0, ',', '.') ?>đ</p>
-                                <?php if (!empty($product['size'])): ?>
-                                <p class="size">Size: <?= htmlspecialchars($product['size']) ?></p>
-                                <?php endif; ?>
-                                <?php if (!empty($product['color'])): ?>
-                                <p class="colors">Màu: <?= htmlspecialchars($product['color']) ?></p>
-                                <?php endif; ?>
-                            </div>
-                        </div>
-                    </a>
+                    <?php include 'includes/product_card.php'; ?>
                 <?php endforeach; ?>
             <?php else: ?>
                 <div class="no-results">
-                    <p>Không tìm thấy sản phẩm nào.</p>
+                    <i class="fas fa-search"></i>
+                    <h3>Không tìm thấy sản phẩm nào</h3>
+                    <p>Hãy thử tìm kiếm với từ khóa khác hoặc duyệt qua các danh mục sản phẩm của chúng tôi.</p>
+                    <a href="/FirstWebsite/index.php" class="back-to-home">Quay về trang chủ</a>
                 </div>
             <?php endif; ?>
-
         </div>
-        <?php else: ?>        <!-- Regular Category Display -->
+    <?php else: ?>
+        <!-- Regular Category Display -->
         <?php foreach ($categories as $category => $categoryProducts): ?>
-        <div class="category-section">
-            <div class="category-header">
-                <h3><?= htmlspecialchars($category) ?></h3>
-                <div class="chat-button" onclick="document.querySelector('.chat-trigger').click()">
-                    <i class="fas fa-comments"></i>
-                    <span>Hỏi đáp</span>
+            <div class="category-section">
+                <div class="category-header">
+                    <h3><?php echo htmlspecialchars($category); ?></h3>
+                </div>
+                <div class="product-grid">
+                    <?php foreach ($categoryProducts as $product): ?>
+                        <?php include 'includes/product_card.php'; ?>
+                    <?php endforeach; ?>
                 </div>
             </div>
-            <div class="product-grid">
-                <?php foreach ($categoryProducts as $product): ?>
-                    <?php include 'includes/product_card.php'; ?>
-                <?php endforeach; ?>
-            </div>
-        </div>
         <?php endforeach; ?>
-        <?php endif; ?>
+    <?php endif; ?>
 
-        <?php if (empty($_GET['search'])): ?>
-        <!-- View More Button - Only show when not searching -->        <div class="view-more">
+    <!-- View More Button: Display only when not searching -->
+    <?php if (empty($_GET['search'])): ?>
+        <div class="view-more">
             <button>Xem Thêm</button>
         </div>
-        <?php endif; ?>
-    </section>
-    <script src="chat/chat.js"></script>
-    <!-- Footer -->
-    
-</body>
-</html>
+    <?php endif; ?>
+</section>
