--- a/auth/login.html
+++ b/auth/login.html
@@ -11,9 +11,8 @@
   <!-- <button class="back-button" onclick="window.location.href='../index.php'">Back</button> -->
   <div class="auth-container">
     <h2>Login</h2>
-    <form method="POST" action="login.php">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" required />
+    <form method="POST" action="login.php">      <label for="email">Email or email</label>
+      <input type="text" id="email" name="email" required placeholder="Enter your email or email" />
 
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required />
