--- a/auth/register.html
+++ b/auth/register.html
@@ -12,11 +12,13 @@
 </head>
 <body>
   <button class="back-button" onclick="window.location.href='../index.php'">Back</button>
-  <div class="auth-container">
-    <h2>Create Account</h2>
+  <div class="auth-container">    <h2>Create Account</h2>
     <form method="POST" action="register.php">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" required />
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" required placeholder="example@email.com" />
+
+      <label for="name">First Name </label>
+      <input type="text" id="name" name="name" required placeholder="Your display name" />
 
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required />
