--- a/auth/login.html
+++ b/auth/login.html
@@ -12,10 +12,10 @@
   <div class="auth-container">
     <h2>Login</h2>
     <form method="POST" action="login.php">      <label for="email">Email or email</label>
-      <input type="text" id="email" name="email" required placeholder="Enter your email or email" />
+      <input type="text" id="email" name="email" required placeholder="Enter your email" />
 
       <label for="password">Password</label>
-      <input type="password" id="password" name="password" required />
+      <input type="password" id="password" name="password" required placeholder="Password"/>
 
       <button type="submit">Login</button>
 
