--- a/auth/login.html
+++ b/auth/login.html
@@ -11,7 +11,7 @@
   <!-- <button class="back-button" onclick="window.location.href='../index.php'">Back</button> -->
   <div class="auth-container">
     <h2>Login</h2>
-    <form method="POST" action="login.php">      <label for="email">Email or email</label>
+    <form method="POST" action="login.php">      <label for="email">Email</label>
       <input type="text" id="email" name="email" required placeholder="Enter your email" />
 
       <label for="password">Password</label>
